Lab1/src/main/java/Subsection_1_1/WebExercise_5.txt
a. Misspell "main"

Error returned when attempting to run the programme.

Error: Main method not found in class HelloWorld, please define the main method as:
   public static void main(String[] args)
or a JavaFX application class must extend javafx.application.Application


b. Misspell "String"

Error returned when attempting to compile.

HelloWorld.java:2: error: cannot find symbol
    public static void main(Sring[] args) {
                            ^
  symbol:   class Sring
  location: class HelloWorld
1 error


c. Misspell "HelloWorld"

Error returned when attempting to compile.

HelloWorld.java:1: error: class HlloWorld is public, should be declared in a file named HlloWorld.java
public class HlloWorld {
       ^
1 error


d. Misspell "System.out"

Error returned when attempting to compile.

HelloWorld.java:3: error: package Sstem does not exist
        Sstem.out.println("Hello World!");
             ^
1 error


e. Misspell "println"

Error returned when attempting to compile.

HelloWorld.java:3: error: cannot find symbol
        System.out.pintln("Hello World!");
                  ^
  symbol:   method pintln(String)
  location: variable out of type PrintStream
1 error

